Cabeçalho quase pronto

--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
 </head>
 <body>
     <header id="header">
-
+        <div class="cabecalhoUm">
+            <div class="imagemLogo">
+                <img src="img/logoSene.png" alt="Logo meias sene">
+            </div>
+            <div class="pesquisa">
+                <input class="procurando" type="text" placeholder="O que você está procurando?">
+            </div>
+        </div>
+        <div class="linha"></div>
+        <nav class="cabecalho2">
+            <a href="" class="item">Feminino</a>
+            <a href="" class="item">Masculino</a>
+            <a href="" class="item">Baby</a>
+            <a href="" class="item">Kids</a>
+        </nav>
     </header>
     <main id="main">
 
     </main>
     <footer id="footer">
-        
+
     </footer>
 </body>
 </html>
