--- a/canoCurtoFem.html
+++ b/canoCurtoFem.html
@@ -40,16 +40,17 @@
                     <div class="preto"></div>
                     <div class="branco"></div>
                     <div class="cinza"></div>
-                    <div class="informacoes">
-                        <h3 class="preco">R$: 4,70</h3>
-                        <h3 class="fonte-fina">á vista</h3>
-                        <button>EU QUERO!</button>
-                    </div>
                 </div>
+                <div class="informacoes-preco">
+                    <h3 class="preco">R$: 4,70</h3>
+                    <h3 class="fonte-fina">á vista</h3>
+                    <button class="btn-euQuero">EU QUERO!</button>
+                </div>
+
             </div>
 
             <div class="meiaCinzaCanoCurto" id="meiaLisaCanoCurto">
-                <img src="img/CanoCurtoCinzaFeminina3pares.png" alt="">
+                <div class="imagemKit"> <img src="img/CanoCurtoCinzaFeminina3pares.png" alt=""></div>
                 <div class="informacao-produto">
                     <h3 class="descricao">Cano Curto - Lisa</h3>
                     <h3 class="descricao">Kit 3 Pares</h3>
@@ -59,32 +60,34 @@
                     <div class="preto"></div>
                     <div class="branco"></div>
                     <div class="cinza"></div>
-                    <div class="informacoes">
-                        <h3 class="preco">R$: 14,10</h3>
-                        <h3 class="fonte-fina">á vista</h3>
-                        <button>EU QUERO!</button>
-                    </div>
                 </div>
+                <div class="informacoes-preco">
+                    <h3 class="preco">R$: 14,10</h3>
+                    <h3 class="fonte-fina">á vista</h3>
+                    <button class="btn-euQuero">EU QUERO!</button>
+                </div>
+
             </div>
 
 
             <div class="conjuntoMeiasPBC" id="meiaLisaCanoCurto">
-                <img src="img/3paresDeMeiaCanoCurto.png" alt="">
+                <div class="imagemKit"> <img src="img/3paresDeMeiaCanoCurto.png" alt=""> </div>
                 <div class="informacao-produto">
                     <h3 class="descricao">Cano Curto - Lisa</h3>
-                    <h3>Kit 3 Pares</h3>
+                    <h3 class="descricao">Kit 3 Pares</h3>
                     <h3 class="fonte-fina"> 34 á 38</h3>
                 </div>
                 <div class="cores">
                     <div class="preto"></div>
                     <div class="branco"></div>
                     <div class="cinza"></div>
-                    <div class="informacoes">
-                        <h3 class="preco">R$: 14,10</h3>
-                        <h3 class="fonte-fina">á vista</h3>
-                        <button>EU QUERO!</button>
-                    </div>
                 </div>
+                <div class="informacoes-preco">
+                    <h3 class="preco">R$: 14,10</h3>
+                    <h3 class="fonte-fina">á vista</h3>
+                    <button class="btn-euQuero">EU QUERO!</button>
+                </div>
+
             </div>
         </div>
 
