--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </nav>
     </header>
     <main id="main">
-
+        <section class="section">
+            
+        </section>
     </main>
     <footer id="footer">
 
