--- a/canoCurtoFem.html
+++ b/canoCurtoFem.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-    <title>Document</title>
+    <title>Meias Sene</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -26,72 +26,130 @@
             <a href="" class="item">Kids</a>
         </nav>
     </header>
-
     <main>
-        <h1> Cano Curto</h1>
-        <div class="conjuntoDeMeia">
-            <div class="meiaPretaCanoCurto" id="meiaLisaCanoCurto">
-                <div class="imagem"> <img src="img/meiaCanoCurtoFeminiaPreta.png" alt=""></div>
-                <div class="informacao-produto">
-                    <h3 class="descricao">Cano Curto - Lisa</h3>
-                    <h3 class="fonte-fina"> 34 á 38</h3>
+        <section id="meiasCanoCurto">
+            <h1 class="titulo">Cano Curto/ Cano Curto Desenhado Feminino </h1>
+            <div class="todas-as-meias-feminina">
+                <div class="Quadrado-da-meia-preta-cano-curto">
+                    <img src="img/meiaCanoCurtoFeminiaPreta.png" alt="">
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3> Cano Curto - Lisa</h3>
+                        <h3> 34 á 38</h3>
+                        <div class="cores-branca-preto-cinza">
+                            <div class="branca"></div>
+                            <div class="preta"></div>
+                            <div class="cinza"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3>R$4,70</h3>
+                        <h3>Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
                 </div>
-                <div class="cores">
-                    <div class="preto"></div>
-                    <div class="branco"></div>
-                    <div class="cinza"></div>
+
+
+
+                <div class="Quadrado-do-kit-cinza-cano-curto">
+                    <img src="img/CanoCurtoCinzaFeminina3pares.png" alt="">
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3> Cano Curto - Lisa</h3>
+                        <h3> 34 á 38</h3>
+                        <div class="cores-branca-preto-cinza">
+                            <div class="branca"></div>
+                            <div class="preta"></div>
+                            <div class="cinza"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3>R$14,10</h3>
+                        <h3>Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
                 </div>
-                <div class="informacoes-preco">
-                    <h3 class="preco">R$: 4,70</h3>
-                    <h3 class="fonte-fina">á vista</h3>
-                    <button class="btn-euQuero">EU QUERO!</button>
+
+
+
+
+                <div class="Quadrado-do-kit-preta-cinza-branco-cano-curto">
+                    <img src="img/3paresDeMeiaCanoCurto.png" alt="">
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3> Cano Curto - Lisa</h3>
+                        <h3> 34 á 38</h3>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3>R$4,70</h3>
+                        <h3>Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
                 </div>
+
+
+
+                <div class="Quadrado-da-meia-preta-cano-curto">
+                    <img src="img/meia-cano-curto-verde.png" alt="">
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3> Cano Curto - Lisa</h3>
+                        <h3> 34 á 38</h3>
+                        <div class="cores-branca-preto-cinza">
+                            <div class="branca"></div>
+                            <div class="preta"></div>
+                            <div class="cinza"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3>R$4,70</h3>
+                        <h3>Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+
+
+
+                <div class="Quadrado-da-meia-preta-cano-curto">
+                    <img src="img/meiaCanoCurtoFeminiaPreta.png" alt="">
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3> Cano Curto - Lisa</h3>
+                        <h3> 34 á 38</h3>
+                        <div class="cores-branca-preto-cinza">
+                            <div class="branca"></div>
+                            <div class="preta"></div>
+                            <div class="cinza"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3>R$4,70</h3>
+                        <h3>Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="Quadrado-da-meia-preta-cano-curto">
+                    <img src="img/meiaCanoCurtoFeminiaPreta.png" alt="">
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3> Cano Curto - Lisa</h3>
+                        <h3> 34 á 38</h3>
+                        <div class="cores-branca-preto-cinza">
+                            <div class="branca"></div>
+                            <div class="preta"></div>
+                            <div class="cinza"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3>R$4,70</h3>
+                        <h3>Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
 
             </div>
-
-            <div class="meiaCinzaCanoCurto" id="meiaLisaCanoCurto">
-                <div class="imagemKit"> <img src="img/CanoCurtoCinzaFeminina3pares.png" alt=""></div>
-                <div class="informacao-produto">
-                    <h3 class="descricao">Cano Curto - Lisa</h3>
-                    <h3 class="descricao">Kit 3 Pares</h3>
-                    <h3 class="fonte-fina"> 34 á 38</h3>
-                </div>
-                <div class="cores">
-                    <div class="preto"></div>
-                    <div class="branco"></div>
-                    <div class="cinza"></div>
-                </div>
-                <div class="informacoes-preco">
-                    <h3 class="preco">R$: 14,10</h3>
-                    <h3 class="fonte-fina">á vista</h3>
-                    <button class="btn-euQuero">EU QUERO!</button>
-                </div>
-
-            </div>
-
-
-            <div class="conjuntoMeiasPBC" id="meiaLisaCanoCurto">
-                <div class="imagemKit"> <img src="img/3paresDeMeiaCanoCurto.png" alt=""> </div>
-                <div class="informacao-produto">
-                    <h3 class="descricao">Cano Curto - Lisa</h3>
-                    <h3 class="descricao">Kit 3 Pares</h3>
-                    <h3 class="fonte-fina"> 34 á 38</h3>
-                </div>
-                <div class="cores">
-                    <div class="preto"></div>
-                    <div class="branco"></div>
-                    <div class="cinza"></div>
-                </div>
-                <div class="informacoes-preco">
-                    <h3 class="preco">R$: 14,10</h3>
-                    <h3 class="fonte-fina">á vista</h3>
-                    <button class="btn-euQuero">EU QUERO!</button>
-                </div>
-
-            </div>
-        </div>
-
-
+        </section>
     </main>
 </body>
 
