--- a/canoCurtoFem.html
+++ b/canoCurtoFem.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meias Sene</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
@@ -29,12 +29,12 @@
     <main>
         <section id="meiasCanoCurto">
             <h1 class="titulo">Cano Curto/ Cano Curto Desenhado Feminino </h1>
-            <div class="todas-as-meias-feminina">
-                <div class="Quadrado-da-meia-preta-cano-curto">
-                    <img src="img/meiaCanoCurtoFeminiaPreta.png" alt="">
+            <div class="todas-as-meias-feminina-cano-curto">
+                <div class="Quadrado-da-meia-preta-cano-curto" id="div-meia-cano-curto">
+                 <div class="container">  <img src="img/meiaCanoCurtoFeminiaPreta.png" alt=""></div> 
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3> Cano Curto - Lisa</h3>
-                        <h3> 34 á 38</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-branca-preto-cinza">
                             <div class="branca"></div>
                             <div class="preta"></div>
@@ -42,19 +42,19 @@
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3>R$4,70</h3>
-                        <h3>Á Vista</h3>
+                        <h3 class="preco">R$4,70</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
 
 
-                <div class="Quadrado-do-kit-cinza-cano-curto">
-                    <img src="img/CanoCurtoCinzaFeminina3pares.png" alt="">
+                <div class="Quadrado-do-kit-cinza-cano-curto" id="div-meia-cano-curto">
+                   <div class="container"><img src="img/CanoCurtoCinzaFeminina3pares.png" alt=""></div> 
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3> Cano Curto - Lisa</h3>
-                        <h3> 34 á 38</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-branca-preto-cinza">
                             <div class="branca"></div>
                             <div class="preta"></div>
@@ -62,8 +62,8 @@
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3>R$14,10</h3>
-                        <h3>Á Vista</h3>
+                        <h3 class="preco">R$14,10</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
@@ -71,35 +71,35 @@
 
 
 
-                <div class="Quadrado-do-kit-preta-cinza-branco-cano-curto">
-                    <img src="img/3paresDeMeiaCanoCurto.png" alt="">
+                <div class="Quadrado-do-kit-preta-cinza-branco-cano-curto" id="div-meia-cano-curto">
+                  <div class="container">  <img src="img/3paresDeMeiaCanoCurto.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3> Cano Curto - Lisa</h3>
-                        <h3> 34 á 38</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
                     </div>
-                    <div class="preco-informacoes">
-                        <h3>R$4,70</h3>
-                        <h3>Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
+                    <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
+                        <h3 class="preco">R$14,10</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu Quero!</button>
                     </div>
                 </div>
 
 
 
-                <div class="Quadrado-da-meia-preta-cano-curto">
-                    <img src="img/meia-cano-curto-verde.png" alt="">
+                <div class="Quadrado-da-meia-verde-cano-curto" id="div-meia-cano-curto">
+                <div class="container">   <img src="img/meia-cano-curto-verde.png" alt=""></div> 
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3> Cano Curto - Lisa</h3>
-                        <h3> 34 á 38</h3>
-                        <div class="cores-branca-preto-cinza">
-                            <div class="branca"></div>
-                            <div class="preta"></div>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
+                        <div class="cores-verdeEscuro-verdeClaro-cinza">
+                            <div class="verdeClaro"></div>
+                            <div class="verdeEscuro"></div>
                             <div class="cinza"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3>R$4,70</h3>
-                        <h3>Á Vista</h3>
+                        <h3 class="preco">R$4,80</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
@@ -107,20 +107,19 @@
 
 
 
-                <div class="Quadrado-da-meia-preta-cano-curto">
-                    <img src="img/meiaCanoCurtoFeminiaPreta.png" alt="">
+                <div class="Quadrado-da-meia-BrancaRosa-cano-curto" id="div-meia-cano-curto">
+                  <div class="container">  <img src="img/meia-cano-curto-rosa.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3> Cano Curto - Lisa</h3>
-                        <h3> 34 á 38</h3>
-                        <div class="cores-branca-preto-cinza">
-                            <div class="branca"></div>
-                            <div class="preta"></div>
-                            <div class="cinza"></div>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
+                        <div class="cores-rosa-verde">
+                            <div class="verde"></div>
+                            <div class="rosa"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3>R$4,70</h3>
-                        <h3>Á Vista</h3>
+                        <h3 class="preco">R$4,80</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
@@ -129,20 +128,20 @@
 
 
 
-                <div class="Quadrado-da-meia-preta-cano-curto">
-                    <img src="img/meiaCanoCurtoFeminiaPreta.png" alt="">
+                <div class="Quadrado-da-meia-pretaRosa-cano-curto" id="div-meia-cano-curto">
+                  <div class="container">  <img src="img/meia-cano-curto-preta-rosa.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3> Cano Curto - Lisa</h3>
-                        <h3> 34 á 38</h3>
-                        <div class="cores-branca-preto-cinza">
-                            <div class="branca"></div>
-                            <div class="preta"></div>
-                            <div class="cinza"></div>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
+                        <div class="cores-azulEscuro-pretaRosa">
+                            <div class="azulEscuro"></div>
+                            <div class="pretaRosa"></div>
+                           
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3>R$4,70</h3>
-                        <h3>Á Vista</h3>
+                        <h3 class="preco">R$4,80</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
