--- a/canoCurtoFem.html
+++ b/canoCurtoFem.html
@@ -31,13 +31,14 @@
             <h1 class="titulo">Cano Curto/ Cano Curto Desenhado Feminino </h1>
             <div class="todas-as-meias-feminina-cano-curto">
                 <div class="Quadrado-da-meia-preta-cano-curto" id="div-meia-cano-curto">
-                 <div class="container">  <img src="img/meiaCanoCurtoFeminiaPreta.png" alt=""></div> 
+                    <div class="container"> <img src="img/meiaCanoCurtoFeminiaPreta.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-branca-preto-cinza">
-                            <div class="branca"></div>
                             <div class="preta"></div>
+                            <div class="branca"></div>
+
                             <div class="cinza"></div>
                         </div>
                     </div>
@@ -51,13 +52,13 @@
 
 
                 <div class="Quadrado-do-kit-cinza-cano-curto" id="div-meia-cano-curto">
-                   <div class="container"><img src="img/CanoCurtoCinzaFeminina3pares.png" alt=""></div> 
+                    <div class="container"><img src="img/CanoCurtoCinzaFeminina3pares.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-branca-preto-cinza">
-                            <div class="branca"></div>
                             <div class="preta"></div>
+                            <div class="branca"></div>
                             <div class="cinza"></div>
                         </div>
                     </div>
@@ -72,7 +73,7 @@
 
 
                 <div class="Quadrado-do-kit-preta-cinza-branco-cano-curto" id="div-meia-cano-curto">
-                  <div class="container">  <img src="img/3paresDeMeiaCanoCurto.png" alt=""></div>
+                    <div class="container"> <img src="img/3paresDeMeiaCanoCurto.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
@@ -87,13 +88,13 @@
 
 
                 <div class="Quadrado-da-meia-verde-cano-curto" id="div-meia-cano-curto">
-                <div class="container">   <img src="img/meia-cano-curto-verde.png" alt=""></div> 
+                    <div class="container"> <img src="img/meia-cano-curto-verde.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-verdeEscuro-verdeClaro-cinza">
                             <div class="verdeClaro"></div>
-                            <div class="verdeEscuro"></div>
+                            <div class="verdeMusgo"></div>
                             <div class="cinza"></div>
                         </div>
                     </div>
@@ -108,12 +109,12 @@
 
 
                 <div class="Quadrado-da-meia-BrancaRosa-cano-curto" id="div-meia-cano-curto">
-                  <div class="container">  <img src="img/meia-cano-curto-rosa.png" alt=""></div>
+                    <div class="container"> <img src="img/meia-cano-curto-rosa.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-rosa-verde">
-                            <div class="verde"></div>
+                            <div class="verde-agua"></div>
                             <div class="rosa"></div>
                         </div>
                     </div>
@@ -129,14 +130,14 @@
 
 
                 <div class="Quadrado-da-meia-pretaRosa-cano-curto" id="div-meia-cano-curto">
-                  <div class="container">  <img src="img/meia-cano-curto-preta-rosa.png" alt=""></div>
+                    <div class="container"> <img src="img/meia-cano-curto-preta-rosa.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-azulEscuro-pretaRosa">
-                            <div class="azulEscuro"></div>
+                            <div class="roxo"></div>
                             <div class="pretaRosa"></div>
-                           
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -150,6 +151,9 @@
             </div>
         </section>
     </main>
+
+
+    
 </body>
 
 </html>
