--- a/index.html
+++ b/index.html
@@ -24,7 +24,24 @@
             <a href="" class="item">Kids</a>
         </nav>
     </header>
+   
     <main id="main">
+        <div class="comeco" id="comeco">
+            <div class="carrossel">
+                <div id="carrosselContainer" class="carrossel-container">
+                    <div class="slide">
+                        <img src="img/carrosselKids.png" alt="banner" id="imagemCarrossel">
+                    </div>
+                    <div class="slide">
+                        <img src="img/carrosselFeminino.png" alt="banner" id="imagemCarrossel">
+                    </div>
+                    <div class="slide">
+                        <img src="img/carrosselMasculino.png" alt="banner" id="imagemCarrossel">
+                    </div>
+                </div>
+                <div class="bolinhas"></div>
+            </div>
+        </div>
         <section class="section">
             
         </section>
@@ -32,5 +49,6 @@
     <footer id="footer">
 
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
