--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         </div>
         <div class="linha"></div>
         <nav class="cabecalho2">
-            <a href="" class="item">Feminino</a>
-            <a href="" class="item">Masculino</a>
-            <a href="" class="item">Baby</a>
-            <a href="" class="item">Kids</a>
+            <a href="" class="item">Baby Fem</a>
+            <a href="" class="item">Baby Masc</a>
+            <a href="" class="item">Kids Fem</a>
+            <a href="" class="item">Kids Masc</a>
+            <a href="" class="item">Adulto Fem</a>
+            <a href="" class="item">Adulto Masc</a>
         </nav>
     </header>
     <main id="main">
