--- a/descricaoFeminina/CanoCurtoFeminina.html
+++ b/descricaoFeminina/CanoCurtoFeminina.html
@@ -19,13 +19,17 @@
             const urlParams = new URLSearchParams(window.location.search);
             const cor = urlParams.get('cor');
 
-            fetch('meias.json')
+            fetch('../meias.json')
                 .then(response => response.json())
                 .then(meias => {
                     const meia = meias[cor];
                     if (meia) {
-                        document.getElementById('imagemMeia').src = meia.imagem;
+                        document.getElementById('imagemMeia').src = '../' + meia.imagem; // Ajusta o caminho da imagem
                         document.getElementById('descricaoMeia').textContent = meia.descricao;
+                    } else {
+                        // Fallback para quando a cor não é encontrada
+                        document.getElementById('imagemMeia').src = '../img/placeholder.png';
+                        document.getElementById('descricaoMeia').textContent = 'Meia não encontrada.';
                     }
                 });
         });
