--- a/index.html
+++ b/index.html
@@ -45,7 +45,25 @@
             </div>
         </div>
         <section class="section">
-            
+            <div class="maisVendidos">
+                <div class="tituloCabecalho">
+
+                </div>
+                <div class="meiasMaisVedidas">
+                    <div class="cadaMeia">
+
+                    </div>
+                    <div class="cadaMeia">
+
+                    </div>
+                    <div class="cadaMeia">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section">
+
         </section>
     </main>
     <footer id="footer">
