--- a/index.html
+++ b/index.html
@@ -65,6 +65,36 @@
         <section class="section">
 
         </section>
+        <section class="sectiion">
+
+        </section>
+        <section class="section">
+            <div class="tudoPagamento">
+                <div class="primeiroTitulo">
+                    <h2>Formas de pagamento</h2>
+                </div>
+                <div class="pagamento">
+                    <div class="formaPagamento">
+                        <img src="img/pag01.png" alt="">
+                    </div>
+                    <div class="formaPagamento">
+                        <img src="img/pag02.png" alt="">
+                    </div>
+                    <div class="formaPagamento">
+                        <img src="img/pag03.png" alt="">
+                    </div>
+                    <div class="formaPagamento">
+                        <img src="img/pag04.png" alt="">
+                    </div>
+                    <div class="formaPagamento">
+                        <img src="img/pag05.png" alt="">
+                    </div>
+                    <div class="formaPagamento">
+                        <img src="img/pag06.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer id="footer">
 
