--- a/index.html
+++ b/index.html
@@ -50,17 +50,56 @@
             <div class="container">
                 <div class="maisVendidos">
                     <div class="tituloCabecalho">
-
+                        <h2>OS MAIS <span>VENDIDOS</span></h2>
                     </div>
                     <div class="meiasMaisVedidas">
-                        <div class="cadaMeia">
-
-                        </div>
-                        <div class="cadaMeia">
-
-                        </div>
-                        <div class="cadaMeia">
-
+                        <div class="todas-as-meias-feminina-cano-curto">
+                            <div class="Quadrado-da-meia-preta-cano-curto" id="div-meia-cano-curto">
+                                <div class="containerMeia"> <img src="img-feminino/MeiaCanoCurto-Preta.png" alt=""></div>
+                                <div class="informacoes-meia-cano-curto-feminino">
+                                    <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                                    <h3 class="numeracao"> 34 á 38</h3>
+                                    <div class="cores-branca-preto-cinza">
+                                        <div class="preta"></div>
+                                        <div class="branca"></div>
+                                        <div class="cinza"></div>
+                                    </div>
+                                </div>
+                                <div class="preco-informacoes">
+                                    <h3 class="preco">R$4,70</h3>
+                                    <h3 class="texto-a-vista">Á Vista</h3>
+                                    <button class="botao-euQuero">Eu Quero!</button>
+                                </div>
+                            </div>
+                            <div class="Quadrado-do-kit-cinza-cano-curto" id="div-meia-cano-curto">
+                                <div class="containerMeia"><img src="img-feminino/CanoCurto-3-Cinza.png" alt=""></div>
+                                <div class="informacoes-meia-cano-curto-feminino">
+                                    <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                                    <h3 class="numeracao"> 34 á 38</h3>
+                                    <div class="cores-branca-preto-cinza">
+                                        <div class="pretaKit"></div>
+                                        <div class="brancaKit"></div>
+                                        <div class="cinzaKit"></div>
+                                    </div>
+                                </div>
+                                <div class="preco-informacoes">
+                                    <h3 class="preco">R$14,10</h3>
+                                    <h3 class="texto-a-vista">Á Vista</h3>
+                                    <button class="botao-euQuero">Eu Quero!</button>
+                                </div>
+                            </div>
+                            <div class="Quadrado-do-kit-preta-cinza-branco-cano-curto" id="div-meia-cano-curto">
+                                <div class="containerMeia"> <img src="img-feminino/CanoCurto-3-PretaCinzaBranca.png" alt=""></div>
+                                <div class="informacoes-meia-cano-curto-feminino">
+                                    <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                                    <h3 class="numeracao"> 34 á 38</h3>
+                                </div>
+                                <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
+                                    <h3 class="preco">R$14,10</h3>
+                                    <h3 class="texto-a-vista">Á Vista</h3>
+                                    <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu Quero!</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -91,10 +130,26 @@
                         </div>
                         <div class="categoriaSeparadamente">
                             <div class="imgCategoria">
+                                <img src="img/categoria03.png" alt="">
+                            </div>
+                            <div class="textoCategoria">
+                                <p>Kids Fem</p>
+                            </div>
+                        </div>
+                        <div class="categoriaSeparadamente">
+                            <div class="imgCategoria">
                                 <img src="img/categoria04.png" alt="">
                             </div>
                             <div class="textoCategoria">
-                                <p>Kids</p>
+                                <p>Kids Masc</p>
+                            </div>
+                        </div>
+                        <div class="categoriaSeparadamente">
+                            <div class="imgCategoria">
+                                <img src="img/categoria05.png" alt="">
+                            </div>
+                            <div class="textoCategoria">
+                                <p>Baby Fem</p>
                             </div>
                         </div>
                         <div class="categoriaSeparadamente">
@@ -102,7 +157,7 @@
                                 <img src="img/categoria06.png" alt="">
                             </div>
                             <div class="textoCategoria">
-                                <p>Baby</p>
+                                <p>Baby Fem</p>
                             </div>
                         </div>
                     </div>
